# ChainBridge

./: .env.example  .gitignore  BREADCRUMB_FEATURE_SUMMARY.md  BREADCRUMB_VISUAL_GUIDE.md  CONTRIBUTING.md  Create page header component with actions  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pr.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  deploy.yml  frontend-a11y.yml  frontend-ci.yml  integration-tests.yml  lighthouse-performance.yml  release.yml  sdk-ci.yml  sdk-release.yml  security.yml
backend/: Dockerfile  alembic.ini  init.sql  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260328_0002_add_asset_table.py  d755d3af7afc_feat_initial_bridge_schema.py
backend/app/: main.py
backend/app/config/: database.py  settings.py
backend/app/indexer/: __init__.py  base.py  bitcoin_indexer.py  ethereum_indexer.py  manager.py  stellar_indexer.py
backend/app/middleware/: auth.py  metrics.py  rate_limit.py
backend/app/models/: __init__.py  asset.py  base.py  chain.py  dispute.py  htlc.py  order.py  user.py
backend/app/observability/: metrics.py
backend/app/routes/: __init__.py  admin.py  analytics.py  assets.py  chains.py  disputes.py  fees.py  htlc.py  orders.py  swaps.py  timelock.py  users.py  ws.py
backend/app/schemas/: __init__.py  asset.py  chain.py  dispute.py  fees.py  htlc.py  order.py  swap.py
backend/app/services/: email.py  fee_estimation.py  order_matching.py  price_oracle.py  rate_calculator.py  timelock_validation.py
backend/app/stellar/: __init__.py  client.py  config.py
backend/app/utils/: address_validation.py  solana.py
backend/app/ws/: events.py  manager.py
backend/tests/: conftest.py  test_address_validation.py  test_fee_estimation.py  test_htlc.py  test_orders.py  test_price_oracle.py  test_rate_calculator.py  test_solana.py  test_swaps.py  test_timelock_validation.py  test_user_account.py
docs/: ACCESSIBILITY.md  API.md  CI_CD.md  PERFORMANCE_MONITORING.md  SDK.md
frontend/: .env.example  .eslintrc.json  .prettierignore  API_VALIDATION.md  BREADCRUMB_IMPLEMENTATION.md  BREADCRUMB_QUICK_START.md  FEATURE_ORDER_FILTERING.md  FORM_FIELD_IMPLEMENTATION.md  FORM_FIELD_MIGRATION.md  README.md  jest.config.ts  lighthouserc.json  next.config.js  package-lock.json  package.json  performance-budget.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.storybook/: test-runner.js  visual-tests.config.js
frontend/e2e/: smoke-tests.spec.ts  swap-flow.spec.ts
frontend/e2e/a11y/: axe-helper.ts  pages.spec.ts
frontend/public/: sw.js
frontend/scripts/: generate-api-types.ts
monitoring/prometheus/: alert_rules.yml  prometheus.yml
relayer/: Cargo.toml  Dockerfile
relayer/src/: config.rs  main.rs  metrics.rs  retry.rs  submit.rs
relayer/src/monitor/: bitcoin.rs  ethereum.rs  stellar.rs
relayer/src/proof/: bitcoin_proof.rs
sdks/: .gitignore  README.md
sdks/examples/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/chainbridge/: __init__.py  client.py  crypto.py  errors.py  http.py  resources.py  types.py  wallets.py  websocket.py
sdks/python/examples/: create_swap.py  track_orders.py
sdks/python/tests/: test_client.py  test_crypto.py  test_http.py  test_wallets.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: create_swap.rs  track_orders.rs
sdks/rust/src/: client.rs  crypto.rs  error.rs  lib.rs  resources.rs  types.rs  wallets.rs  websocket.rs
sdks/rust/tests/: integration.rs
sdks/typescript/: .npmignore  README.md  jest.config.js  package.json  tsconfig.json
smartcontract/: Cargo.toml
smartcontract/src/: governance.rs  htlc.rs  lib.rs  liquidity.rs  order.rs  referral.rs  storage.rs  swap.rs  test.rs  types.rs
tests/: Cargo.toml  README.md  lib.rs  run_tests.sh
tests/harness/: mod.rs
tests/integration/: mod.rs  swap_flows.rs
tests/mocks/: mod.rs
tests/performance/: benchmarks.rs
tests/stress/: mod.rs
(+310 files in other folders)
