[package]
name = "chainbridge-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
bitcoin = "0.31"
ethers = "2.0"
stellar_sdk = "0.1"
sha2 = "0.11"
hex = "0.4"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
