[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainbridge"
version = "0.1.0"
description = "Official Python SDK for ChainBridge cross-chain atomic swaps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "ChainBridge Contributors" }]
keywords = ["chainbridge", "atomic-swap", "htlc", "stellar", "bitcoin", "ethereum", "cross-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25,<1",
    "websockets>=12,<14",
    "typing-extensions>=4.8 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.27",
    "ruff>=0.1",
    "mypy>=1.7",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/floxxih/ChainBridge"
Source = "https://github.com/floxxih/ChainBridge/tree/master/sdks/python"
Issues = "https://github.com/floxxih/ChainBridge/issues"

[tool.setuptools.packages.find]
include = ["chainbridge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true
python_version = "3.9"
